[package]
name = "MaFileManager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.26"
rfd = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
png = "0.17"
sys-locale = "0.3"

[build-dependencies]
winres = "0.1"

[profile.release]
# оптимизация и strip символов
opt-level = 3
lto = true
codegen-units = 1
strip = true